# cps344-assignments

01-whimsi-browser/: README.md
01-whimsi-browser/client/: whimsi_client.py  whimsi_renderer.py
01-whimsi-browser/server/: whimsi_server.py
01-whimsi-browser/whimsi/: breakfast.whimsi  cats.whimsi  desserts.whimsi  dinner.whimsi  hello.whimsi  lunch.whimsi  more_cats.whimsi  more_text.whimsi  recipes.whimsi
02-serializer-app/: CMakeLists.txt  README.md
02-serializer-app/src/: client.cpp  server.cpp  test_serializer.cpp
03-reliable/include/: sender.hpp
03-reliable/src/: client.cpp  server.cpp
blockchain/: miner.py
cdma/: cdma.py
checksum/: CMakeLists.txt
checksum/src/: checksum.c
congestion/: conn.py  packet_data.py  perfect_link.py  variable_rtt_link.py
crc/: parity.py  parity_2d.py
multiplexer-example/: CMakeLists.txt
multiplexer-example/include/: app_message.h
multiplexer-example/src/: tcp_client.cpp  tcp_client_sol.cpp  tcp_server.cpp
packet-forward/: forward.py  sdn.py
security/: rsa.py
socket-intro/: CMakeLists.txt  README.md
socket-intro/src/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
